удаление филиалов и история его
